[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["J1 <dmogki@gmail.com>"]
description = ""
name = "python-1"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23"
beautifulsoup4 = "^4.8"
[tool.poetry.dev-dependencies]
